try baseline with no train test split

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -333,7 +333,9 @@
     "- Unet 11 - 0.59 train IoU - Two Down Convs + No Scaling + Random Augments + No Train Test Split\n",
     "  - predicts 481 total 1.0... probably not it either\n",
     "- Unet 12 - 0.58 train IoU - Two Down Convs + Robust Scaler on full Train Set + Random Augments + No Train Test Split\n",
-    "  - predicts 3091 1.0 values, maybe this is the next one to test?"
+    "  - predicts 3091 1.0 values, maybe this is the next one to test?\n",
+    "- Unet 13 - 0.66 train IoU - Full Unet + Robust Scaler on full Train Set + Random Augments + No Train Test Split\n",
+    "  - predicts 41 1.0 values... not it..."
    ]
   }
  ],
