fix bug with specifying well number

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -28,24 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA not available, switching to MPS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import unet\n",
     "import baseline\n",
     "import json\n",
     "# model = unet.UNet(n_channels=1, n_classes=1)\n",
     "model = baseline.Baseline()\n",
-    "model.load_state_dict(torch.load('./checkpoints/baseline/baseline_model_3.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load('./checkpoints/baseline/baseline_model_4.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, well_number=5)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False, well_number=5)"
    ]
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa294aafb80>"
+       "<matplotlib.image.AxesImage at 0x7fee54cfadd0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,7 +150,7 @@
     }
    ],
    "source": [
-    "out_1 = F.sigmoid(model(X_train[100]))\n",
+    "out_1 = F.sigmoid(model(X_train[1500]))\n",
     "pred_1 = (out_1 > .5)*1.\n",
     "plt.imshow(pred_1.reshape(36, 36))"
    ]
