--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "from sklearn.preprocessing import RobustScaler\n",
     "from tqdm import tqdm\n",
     "import random\n",
-    "import json"
+    "import json\n",
+    "import data_pipeline"
    ]
   },
   {
@@ -5054,6 +5055,439 @@
    "source": [
     "input = torch.tensor(merged.iloc[1]['labels']).reshape(36, 36)*1.\n",
     "plt.imshow(input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Measuring label distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data_pipeline.build_dataframe(use_processed_images=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>well_number</th>\n",
+       "      <th>patch_number</th>\n",
+       "      <th>data</th>\n",
+       "      <th>label_name</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>1287</th>\n",
+       "      <th>1288</th>\n",
+       "      <th>1289</th>\n",
+       "      <th>1290</th>\n",
+       "      <th>1291</th>\n",
+       "      <th>1292</th>\n",
+       "      <th>1293</th>\n",
+       "      <th>1294</th>\n",
+       "      <th>1295</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>well_11_patch_983.npy</td>\n",
+       "      <td>11</td>\n",
+       "      <td>983</td>\n",
+       "      <td>[-0.0066450536, -0.0106886625, -0.009443939, 0...</td>\n",
+       "      <td>well_11_patch_983.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>well_7_patch_88.npy</td>\n",
+       "      <td>7</td>\n",
+       "      <td>88</td>\n",
+       "      <td>[0.017143846, 0.013577938, 0.009180188, 0.0045...</td>\n",
+       "      <td>well_7_patch_88.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>well_11_patch_1434.npy</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1434</td>\n",
+       "      <td>[0.007851183, 0.0034598112, 0.011476576, 0.019...</td>\n",
+       "      <td>well_11_patch_1434.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>well_3_patch_1247.npy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1247</td>\n",
+       "      <td>[-0.02209872, -0.022332013, -0.018558562, -0.0...</td>\n",
+       "      <td>well_3_patch_1247.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>well_13_patch_220.npy</td>\n",
+       "      <td>13</td>\n",
+       "      <td>220</td>\n",
+       "      <td>[-0.00675261, -0.0031290054, -0.0030698776, 0....</td>\n",
+       "      <td>well_13_patch_220.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9665</th>\n",
+       "      <td>well_7_patch_1565.npy</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1565</td>\n",
+       "      <td>[-0.016746163, -0.018540978, -0.020258427, -0....</td>\n",
+       "      <td>well_7_patch_1565.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9666</th>\n",
+       "      <td>well_13_patch_239.npy</td>\n",
+       "      <td>13</td>\n",
+       "      <td>239</td>\n",
+       "      <td>[0.015769243, -0.003939688, -0.014544368, -0.0...</td>\n",
+       "      <td>well_13_patch_239.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9667</th>\n",
+       "      <td>well_7_patch_91.npy</td>\n",
+       "      <td>7</td>\n",
+       "      <td>91</td>\n",
+       "      <td>[-0.026783168, -0.028598666, -0.01862669, -0.0...</td>\n",
+       "      <td>well_7_patch_91.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9668</th>\n",
+       "      <td>well_11_patch_742.npy</td>\n",
+       "      <td>11</td>\n",
+       "      <td>742</td>\n",
+       "      <td>[-0.0031020048, -0.0025629997, 0.00415349, 0.0...</td>\n",
+       "      <td>well_11_patch_742.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9669</th>\n",
+       "      <td>well_3_patch_366.npy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>366</td>\n",
+       "      <td>[-0.0051110983, -0.0019824207, -0.00023239851,...</td>\n",
+       "      <td>well_3_patch_366.npy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9330 rows × 1302 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    filename  well_number  patch_number  \\\n",
+       "0      well_11_patch_983.npy           11           983   \n",
+       "1        well_7_patch_88.npy            7            88   \n",
+       "2     well_11_patch_1434.npy           11          1434   \n",
+       "3      well_3_patch_1247.npy            3          1247   \n",
+       "4      well_13_patch_220.npy           13           220   \n",
+       "...                      ...          ...           ...   \n",
+       "9665   well_7_patch_1565.npy            7          1565   \n",
+       "9666   well_13_patch_239.npy           13           239   \n",
+       "9667     well_7_patch_91.npy            7            91   \n",
+       "9668   well_11_patch_742.npy           11           742   \n",
+       "9669    well_3_patch_366.npy            3           366   \n",
+       "\n",
+       "                                                   data  \\\n",
+       "0     [-0.0066450536, -0.0106886625, -0.009443939, 0...   \n",
+       "1     [0.017143846, 0.013577938, 0.009180188, 0.0045...   \n",
+       "2     [0.007851183, 0.0034598112, 0.011476576, 0.019...   \n",
+       "3     [-0.02209872, -0.022332013, -0.018558562, -0.0...   \n",
+       "4     [-0.00675261, -0.0031290054, -0.0030698776, 0....   \n",
+       "...                                                 ...   \n",
+       "9665  [-0.016746163, -0.018540978, -0.020258427, -0....   \n",
+       "9666  [0.015769243, -0.003939688, -0.014544368, -0.0...   \n",
+       "9667  [-0.026783168, -0.028598666, -0.01862669, -0.0...   \n",
+       "9668  [-0.0031020048, -0.0025629997, 0.00415349, 0.0...   \n",
+       "9669  [-0.0051110983, -0.0019824207, -0.00023239851,...   \n",
+       "\n",
+       "                  label_name  0  1  2  3  4  ...  1287  1288  1289  1290  \\\n",
+       "0      well_11_patch_983.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "1        well_7_patch_88.npy  0  0  0  0  0  ...     1     1     1     0   \n",
+       "2     well_11_patch_1434.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "3      well_3_patch_1247.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "4      well_13_patch_220.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "...                      ... .. .. .. .. ..  ...   ...   ...   ...   ...   \n",
+       "9665   well_7_patch_1565.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "9666   well_13_patch_239.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "9667     well_7_patch_91.npy  0  0  0  0  0  ...     1     1     0     0   \n",
+       "9668   well_11_patch_742.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "9669    well_3_patch_366.npy  0  0  0  0  0  ...     0     0     0     0   \n",
+       "\n",
+       "      1291  1292  1293  1294  1295  \\\n",
+       "0        0     0     0     0     0   \n",
+       "1        0     0     0     0     0   \n",
+       "2        0     0     0     0     0   \n",
+       "3        0     0     0     0     0   \n",
+       "4        0     0     0     0     0   \n",
+       "...    ...   ...   ...   ...   ...   \n",
+       "9665     0     0     0     0     0   \n",
+       "9666     0     0     0     0     0   \n",
+       "9667     0     0     0     0     0   \n",
+       "9668     0     0     0     0     0   \n",
+       "9669     0     0     0     0     0   \n",
+       "\n",
+       "                                                 labels  \n",
+       "0     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "1     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "2     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...  \n",
+       "3     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "4     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...  \n",
+       "...                                                 ...  \n",
+       "9665  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, ...  \n",
+       "9666  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, ...  \n",
+       "9667  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "9668  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "9669  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "\n",
+       "[9330 rows x 1302 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1770, 1296)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack(df['labels']).shape"
    ]
   }
  ],
