once more i am fixing the metrics

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -5489,6 +5489,99 @@
    "source": [
     "np.vstack(df['labels']).shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing KFolds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "import numpy as np\n",
+    "import train_unet\n",
+    "import unet\n",
+    "import data_pipeline\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "\n",
+    "dataframe = data_pipeline.build_dataframe(use_processed_images=False)\n",
+    "X = torch.from_numpy(np.vstack(dataframe['data'].to_numpy()))\n",
+    "X = torch.nan_to_num(X)\n",
+    "Y = torch.from_numpy(np.vstack(dataframe['labels'].to_numpy()))\n",
+    "splits = KFold(n_splits=5)\n",
+    "\n",
+    "# models = [1, 2, 3, 4] # Number of UNet steps\n",
+    "\n",
+    "# per_model_losses = {}\n",
+    "# per_model_metrics = {}\n",
+    "# for steps in models:\n",
+    "#     model = unet.UNet(n_channels=1, n_classes=1, n_steps=steps).to(torch.device('cuda:0'))\n",
+    "#     model_losses = []\n",
+    "#     model_metrics = []\n",
+    "#     for fold, (train_indices, valid_indices) in enumerate(splits):\n",
+    "#         print(\"-\"*100)\n",
+    "#         print(f\"Unet with Steps: {model.n_steps}, Fold: {fold}\")\n",
+    "#         X_train, X_valid = X[train_indices].float().reshape(-1, 36*36), X[valid_indices].float().reshape(-1, 36*36)\n",
+    "#         Y_train, Y_valid = Y[train_indices].float(), Y[valid_indices].float()\n",
+    "\n",
+    "#         # Scale\n",
+    "#         scaler = RobustScaler().fit(X_train)\n",
+    "#         X_train, X_valid = torch.from_numpy(scaler.transform(X_train)), torch.from_numpy(scaler.transform(X_valid))\n",
+    "#         X_train, X_valid = X_train.float().reshape(-1, 1, 36, 36), X_valid.float().reshape(-1, 1, 36, 36)\n",
+    "#         Y_train, Y_valid = Y_train.reshape(-1, 1, 36, 36), Y_valid.reshape(-1, 1, 36, 36)\n",
+    "\n",
+    "#         train_dataset = data_pipeline.WellsDataset(X_train, Y_train, transform=data_pipeline.image_label_transforms)\n",
+    "#         valid_dataset = data_pipeline.WellsDataset(X_valid, Y_valid, transform=None)\n",
+    "\n",
+    "#         train_dataloader = DataLoader(train_dataset, batch_size=128)\n",
+    "#         valid_dataloader = DataLoader(valid_dataset, batch_size=128)\n",
+    "        \n",
+    "#         # Train\n",
+    "#         _, _, _, valid_losses, valid_metrics = train_unet.train_local(model, train_dataloader, valid_dataloader, lr=.001, num_epochs=100)\n",
+    "#         model_losses.append(valid_losses[-1])\n",
+    "#         model_metrics.append(valid_metrics[-1])\n",
+    "\n",
+    "#     per_model_losses[model.n_steps] = np.mean(model_losses)\n",
+    "#     per_model_metrics[model.n_steps] = np.mean(model_metrics)\n",
+    "#     print(f\"Finish folds for Model with Steps: {model.n_steps}\")\n",
+    "#     print(f\"Average Loss: {per_model_losses[model.n_steps]}\")\n",
+    "#     print(f\"Average IoU   {per_model_metrics[model.n_steps]}\")\n",
+    "\n",
+    "# print(\"-\"*100)\n",
+    "# print(\"Finished full KFolds testing\")\n",
+    "# for key in per_model_losses.keys():\n",
+    "#     print(f\"UNet(steps={key}): loss={per_model_losses[key]}, IoU={per_model_metrics[key]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([1866, 1867, 1868, ..., 9327, 9328, 9329]), array([   0,    1,    2, ..., 1863, 1864, 1865]))\n",
+      "(array([   0,    1,    2, ..., 9327, 9328, 9329]), array([1866, 1867, 1868, ..., 3729, 3730, 3731]))\n",
+      "(array([   0,    1,    2, ..., 9327, 9328, 9329]), array([3732, 3733, 3734, ..., 5595, 5596, 5597]))\n",
+      "(array([   0,    1,    2, ..., 9327, 9328, 9329]), array([5598, 5599, 5600, ..., 7461, 7462, 7463]))\n",
+      "(array([   0,    1,    2, ..., 7461, 7462, 7463]), array([7464, 7465, 7466, ..., 9327, 9328, 9329]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in splits.split(X=X, y=Y):\n",
+    "    print(i)"
+   ]
   }
  ],
  "metadata": {
