train large unet 15

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -171,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7c95271930>"
+       "<matplotlib.image.AxesImage at 0x7f7c98be5fc0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -201,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7c952cc9d0>"
+       "<matplotlib.image.AxesImage at 0x7f7c98c1d9f0>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,11 +495,14 @@
     "  - predicts 3091 1.0 values, maybe this is the next one to test?\n",
     "- Unet 13 - 0.66 train IoU - Full Unet + Robust Scaler on full Train Set + Random Augments + No Train Test Split\n",
     "  - predicts 41 1.0 values... not it...\n",
+    "- Unet 14 - After using KFolds to find the best Unet, we were able to beat the baseline score!\n",
+    "  - Important to note that there are outlier values in the testing set, deciding what to do with these examples will help our score\n",
     "\n",
     "\n",
     "## Baselines\n",
     "\n",
-    "- We tested a baseline trained only on well 3 (baseline_4), and it succeeds in producing output that is not only one specific class. This demonstrates that on a single well, it is possible to implement the baseline. "
+    "- We tested a baseline trained only on well 3 (baseline_4), and it succeeds in producing output that is not only one specific class. This demonstrates that on a single well, it is possible to implement the baseline. \n",
+    "- We were able to reach the baseline score."
    ]
   }
  ],
