preds 12 and outliers detection in evaluate

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,18 @@
     "X_test, X_names, X_train, Y_train = data_pipeline.build_test_dataloaders(test_df, train_df, apply_scaling=True)\n",
     "test_dl = DataLoader(TensorDataset(X_test), batch_size=1)\n",
     "train_data = torch.from_numpy(np.vstack(train_df['data'].to_numpy()))\n",
-    "train_data = torch.nan_to_num(train_data)"
+    "train_data = torch.nan_to_num(train_data)\n",
+    "test_data = torch.from_numpy(np.vstack(test_df['data'].to_numpy()))\n",
+    "test_data = torch.nan_to_num(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outliers = ((test_data.min(dim=1, keepdim=True).values < -10) == True).flatten()"
    ]
   },
   {
