--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2433,7 +2433,7 @@
     "\n",
     "df = pd.DataFrame(data=data_dict, columns=['filename', 'well_number', 'patch_number', 'data'])\n",
     "\n",
-    "df_y = pd.read_csv('train/y_train.csv')\n",
+    "df_y = pd.read_csv('./train/y_train_eTb9B1B.csv')\n",
     "df_y['Unnamed: 0'] = df_y['Unnamed: 0'] + '.npy'\n",
     "\n",
     "# Create single dataframe with data and labels as lists\n",
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2601,7 +2601,7 @@
        "[9670 rows x 4 columns]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2612,7 +2612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2959,7 +2959,7 @@
        "[10290 rows x 1297 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
