bettter clsfr and fix pseudo labels

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -5230,6 +5230,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensors = torch.zeros((128, 1, 36, 36))\n",
+    "tensors = tensors.flatten(start_dim=1)\n",
+    "contains_ones = (tensors == 1).any(dim=1)\n",
+    "\n",
+    "# Convert boolean tensor to integer tensor (1 if True, 0 if False)\n",
+    "labels = contains_ones.int()\n",
+    "\n",
+    "# Convert the tensor to a Python list\n",
+    "labels"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
