add cutout augmentation

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -5138,16 +5138,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fdb902c2350>"
+       "array([[-0.00269639,  0.00602767,  0.01084962, ..., -0.00350821,\n",
+       "        -0.00708356, -0.00991803],\n",
+       "       [-0.00893739,  0.00189418,  0.01071942, ...,  0.00678015,\n",
+       "        -0.00641987, -0.01227528],\n",
+       "       [-0.00245044,  0.00560686,  0.00716606, ..., -0.00634488,\n",
+       "        -0.00755054, -0.00987074],\n",
+       "       ...,\n",
+       "       [ 0.00990433,  0.00615823,  0.00117517, ..., -0.00738999,\n",
+       "        -0.00206977,  0.00638276],\n",
+       "       [ 0.00792462,  0.00267786, -0.00367349, ..., -0.00739792,\n",
+       "        -0.00070792,  0.00592417],\n",
+       "       [ 0.00592762, -0.00217772, -0.00118536, ..., -0.01028013,\n",
+       "        -0.00150168,  0.00405622]], dtype=float32)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5164,7 +5176,8 @@
    ],
    "source": [
     "data_train_patch_9 = np.vstack(df_train[(df_train['well_number']==1) & (df_train['patch_number']==10)]['data']).reshape(36, 36)\n",
-    "plt.imshow(data_train_patch_9)"
+    "plt.imshow(data_train_patch_9)\n",
+    "data_train_patch_9"
    ]
   },
   {
