introduce new r2u_att model

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -184,38 +184,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "def precision_score_(groundtruth_mask, pred_mask):\n",
     "    intersect = torch.sum(pred_mask*groundtruth_mask)\n",
     "    total_pixel_pred = torch.sum(pred_mask)\n",
-    "    precision = torch.mean(intersect/total_pixel_pred)\n",
+    "    precision = torch.mean(intersect/(total_pixel_pred+1e-6))\n",
     "    return precision\n",
     "\n",
     "def recall_score_(groundtruth_mask, pred_mask):\n",
     "    intersect = torch.sum(pred_mask*groundtruth_mask)\n",
     "    total_pixel_truth = torch.sum(groundtruth_mask)\n",
-    "    recall = torch.mean(intersect/total_pixel_truth)\n",
+    "    recall = torch.mean(intersect/(total_pixel_truth+1e-6))\n",
     "    return recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 6665/9330 [02:22<01:04, 41.01it/s]"
+      "  0%|          | 0/9330 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9330/9330 [03:16<00:00, 47.39it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average precision on train: 0.7025871872901917\n",
+      "Average recall on train:    0.7327790856361389\n"
      ]
     }
    ],
    "source": [
     "sigmoid_level = .5\n",
+    "total_precision = []\n",
+    "total_recall = []\n",
+    "with torch.no_grad():\n",
+    "  predictions = {}\n",
+    "  model.eval()\n",
+    "  for x, y in tqdm(train_dl):\n",
+    "    input = x\n",
+    "    mask = y.reshape(36, 36)\n",
+    "    out, _ = model(input)\n",
+    "    preds = ((F.sigmoid(out) > sigmoid_level)*1.).reshape(36, 36)\n",
+    "    total_precision.append(precision_score_(mask, preds))\n",
+    "    total_recall.append(recall_score_(mask, preds))\n",
+    "print(f\"Average precision on train: {np.mean(total_precision)}\")\n",
+    "print(f\"Average recall on train:    {np.mean(total_recall)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9330/9330 [03:09<00:00, 49.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average precision on train: 0.6592340469360352\n",
+      "Average recall on train:    0.7640684843063354\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigmoid_level = .1\n",
+    "total_precision = []\n",
+    "total_recall = []\n",
+    "with torch.no_grad():\n",
+    "  predictions = {}\n",
+    "  model.eval()\n",
+    "  for x, y in tqdm(train_dl):\n",
+    "    input = x\n",
+    "    mask = y.reshape(36, 36)\n",
+    "    out, _ = model(input)\n",
+    "    preds = ((F.sigmoid(out) > sigmoid_level)*1.).reshape(36, 36)\n",
+    "    total_precision.append(precision_score_(mask, preds))\n",
+    "    total_recall.append(recall_score_(mask, preds))\n",
+    "print(f\"Average precision on train: {np.mean(total_precision)}\")\n",
+    "print(f\"Average recall on train:    {np.mean(total_recall)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9330/9330 [03:10<00:00, 49.04it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average precision on train: 0.689048171043396\n",
+      "Average recall on train:    0.7459034323692322\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigmoid_level = .3\n",
     "total_precision = []\n",
     "total_recall = []\n",
     "with torch.no_grad():\n",
