--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,17 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import unet\n",
     "import r2u_att\n",
     "\n",
-    "model = unet.UNet(n_channels=1, n_classes=1, n_steps=4)\n",
+    "# model = unet.UNet(n_channels=1, n_classes=1, n_steps=4)\n",
     "# model = baseline.Baseline()\n",
-    "# model = r2u_att.R2AttU_Net(img_ch=1, output_ch=1, t=2)\n",
-    "model.load_state_dict(torch.load('./checkpoints/unet/unet_19.pt', map_location=torch.device('cpu')))\n",
+    "model = r2u_att.R2U_Net(img_ch=1, output_ch=1, t=2)\n",
+    "# model.load_state_dict(torch.load('./checkpoints/unet/unet_19.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "X_test, X_names, X_train, Y_train = data_pipeline.build_test_dataloaders(test_df, train_df, apply_scaling=True)\n",
