exact r2u as paper

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -74,8 +74,8 @@
     "\n",
     "# model = unet.UNet(n_channels=1, n_classes=1, n_steps=4)\n",
     "# model = baseline.Baseline()\n",
-    "# model = r2u_att.R2U_Net(img_ch=1, output_ch=1, t=2)\n",
-    "model = attunet.AttU_Net(img_ch=1, output_ch=1)\n",
+    "model = r2u_att.R2U_Net(img_ch=1, output_ch=1, t=2)\n",
+    "# model = attunet.AttU_Net(img_ch=1, output_ch=1)\n",
     "# model.load_state_dict(torch.load('./checkpoints/unet/unet_19.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False, limit_well_number=None)\n",
