prep unet with cutout

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +74,9 @@
     "\n",
     "# model = unet.UNet(n_channels=1, n_classes=1, n_steps=4)\n",
     "# model = baseline.Baseline()\n",
-    "model = r2u_att.R2U_Net(img_ch=1, output_ch=1, t=2)\n",
+    "model = r2u_att.R2AttU_Net(img_ch=1, output_ch=1, t=2)\n",
     "# model = attunet.AttU_Net(img_ch=1, output_ch=1)\n",
-    "# model.load_state_dict(torch.load('./checkpoints/unet/unet_19.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load('./checkpoints/r2u/r2u_att_2.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "X_test, X_names, X_train, Y_train = data_pipeline.build_test_dataloaders(test_df, train_df, apply_scaling=True)\n",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [00:52, 48.79it/s]\n"
+      "2538it [02:24, 17.51it/s]\n"
      ]
     }
    ],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,11 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('./outputs/KIRBY_predictions_19.csv')"
+    "preds_df.to_csv('./outputs/KIRBY_predictions_20.csv')"
    ]
   },
   {
